Fix one more string.

--- a/AUTHORS
+++ b/AUTHORS
@@ -103,6 +103,7 @@ Romanian             - Liviu Danicel <liviu.danicel@spymac.com>
 Russian              - Pavlo Bohmat <bohm@ukr.net>
                        Dan Korostelev <dan@ats.energo.ru>
                        Vitaly Lipatov <lav@altlinux.ru>
+                       Maxim Musatov <m1kc@yandex.ru>
 Simplified Chinese   - Chong Kai Xiong <descender@phreaker.net>
 Traditional Chinese  - Chao-Hsiung Liao <pesder.liao@msa.hinet.net>
 Slovak               - Pavel Kanzelsberger <kanzels@zmail.sk>
